2008-10-16  Don Porter	<dgp@users.sourceforge.net>

	* library/init.tcl:	Revised [unknown] so that it carefully 
	preserves the state of the ::errorInfo and ::errorCode variables
	at the start of auto-loading and restores that state before the
	autoloaded command is evaluated.  [Bug 2140628]

2008-10-10  Don Porter	<dgp@users.sourceforge.net>

	*** 8.5.5 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.5 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Update for 8.5.5 release.

2008-10-08  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclTrace.c:   Corrected handling of errors returned by
	variable traces so that the errorInfo value contains the original
	error message.  [Bug 2151707]

	* generic/tclVar.c:     Revised implementation of TclObjVarErrMsg
	so that error message construction does not disturb an existing
	iPtr->errorInfo that may be in progress.

2008-10-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* tclWinTest.c: Fix compiler warning when compiling this file with mingw gcc:
    tclWinTest.c:706: warning: dereferencing type-punned pointer will break
    strict-aliasing rules
	* generic/tclLoad.c: Make sure that any library which doesn't have an
	unloadproc is only really unloaded when no library code is executed
	yet. [Bug 2059262]

2008-10-06  Joe Mistachkin  <joe@mistachkin.com>

	* tools/man2tcl.c: Added missing line from patch by Harald Oehlmann.
	[Bug 1934200]

2008-10-05  Kevin B, Kenny  <kennykb@acm.org>

	* libtommath/bn_mp_sqrt.c (bn_mp_sqrt): Handle the case where
	* tests/expr.test (expr-47.13):         a number's square root
	is between n<<DIGIT_BIT and n<<DIGIT_BIT+1. [Bug 2143288]
	Thanks to Malcolm Boffey (malcolm.boffey@virgin.net) for
	the patch.
	
2008-10-02  Joe Mistachkin  <joe@mistachkin.com>

	* tools/man2help2.tcl: Integrated patches from Harald Oehlmann.